<resources>
    <string name="app_name">Droidcon Boston</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>

    <string name="speaker_avatar">Speaker avatar</string>
    <string name="volunteer_avatar">Volunteer avatar</string>

    <string name="hint_bookmark">Add to My Schedule</string>
    <string name="hint_bookmark_added">Added to My Schedule</string>
    <string name="hint_faq_photo">FAQ Photo</string>
    <string name="hint_available">Available</string>

    <string name="conference_name">Droidcon Boston</string>
    <string name="instagram_link">https://www.instagram.com/droidconbos/</string>
    <string name="facebook_link">https://www.facebook.com/droidconbos/</string>
    <string name="twitter_link">https://twitter.com/</string>
    <string name="linkedin_link">https://www.linkedin.com/groups/8586436</string>
    <string name="linkedin_profile_link">https://www.linkedin.com/in/</string>

    <string name="str_agenda">Agenda</string>
    <string name="str_my_schedule">My Schedule</string>
    <string name="str_social">Social</string>
    <string name="str_faq">FAQ</string>
    <string name="str_about_us">About Us</string>
    <string name="str_speakers">Speakers</string>
    <string name="str_volunteers">Volunteers</string>
    <string name="str_coc">Code Of Conduct</string>
    <string name="str_login">Log In</string>
    <string name="str_logout">Log Out</string>
    <string name="str_twitter_feed">Twitter Feed</string>
    <string name="str_title_error">Error</string>
    <string name="social_title_facebook">Facebook</string>
    <string name="social_title_instagram">Instagram</string>
    <string name="social_title_linkedin">LinkedIn</string>
    <string name="social_title_twitter">Twitter</string>
    <string name="saved_agenda_item">Saved to My Schedule</string>
    <string name="removed_agenda_item">Removed from My Schedule</string>

    <string name="prefix_room">at</string>
    <string name="header_speakers">Speakers:</string>
    <string name="header_speaker">Speaker:</string>

    <string name="str_session_start_soon">Starting soon: %1$s</string>
    <string name="str_agenda_detail_room">at %1$s</string>
    <string name="str_agenda_detail_time">%1$s - %2$s</string>
    <string name="close">Close</string>
    <string name="droidconbos_twitter_handle">droidconbos</string>
    <string name="no_bookmarked_items">No talks added to My Schedule\nfor this day</string>
    <string name="twitter_error_txt">Sorry we couldn\'t fetch tweets :(\nSwipe down to
        retry.</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="logo">Logo</string>
    <string name="header_background">Header Background</string>
    <string name="navigation_header_image">Navigation Header Image</string>
    <string name="social_icon">Social Icon</string>
    <string name="linkedin_icon">LinkedIn Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="content_description_logo">Droidcon Boston Android logo</string>
    <string name="jump_btn_title">Jump to Current</string>
    <string name="search">Search</string>
    <string name="search_hint">Speaker, Talk, Topic…</string>
    <string name="close_search">Close Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="there_are_no_talks_that_match_this_search">There are no talks that match this search.</string>
    <string name="what_did_you_think">What did you think?</string>
    <string name="rate">Rate</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="err_select_rating">Please select a rating.</string>
    <string name="sharing_twitter_title">Enjoy this talk? Let your followers know!</string>

    <string name="twitter_handel">\@%s</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">NpgDY5dYI3M2is9V4mbK0IKMS</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">JhaeIidtw4MnY9tvbsxIFSn2CUxn9B4lLYc3WVcu6eZmDc9HAo</string>
</resources>
