<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <RelativeLayout
        android:id="@+id/rl_speaker_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgv_header_bg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/header_background"
            android:scaleType="centerCrop"
            android:src="@drawable/gradient_splash_background" />


        <ImageView
            android:id="@+id/imgv_speaker_detail_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/speaker_avatar"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_speaker_detail_name"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgv_speaker_detail_avatar"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center"
            android:paddingStart="@dimen/def_padding"
            android:paddingEnd="@dimen/def_padding"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@tools:sample/full_names" />


        <TextView
            android:id="@+id/tv_speaker_detail_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_speaker_detail_name"
            android:layout_alignParentStart="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:paddingStart="@dimen/def_padding_large"
            android:paddingEnd="@dimen/def_padding_large"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            tools:text="Software Engineer @ Company" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_speaker_detail_description"
            android:layout_alignEnd="@id/imgv_header_bg"
            android:layout_marginBottom="-20dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/def_padding"
            android:paddingLeft="@dimen/def_padding"
            android:paddingEnd="@dimen/def_padding"
            android:paddingRight="@dimen/def_padding">

            <ImageView
                android:id="@+id/imgv_twitter"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/twitter_icon"
                android:paddingStart="@dimen/def_padding"
                android:paddingLeft="@dimen/def_padding"
                android:paddingEnd="@dimen/def_padding"
                android:paddingRight="@dimen/def_padding"
                android:src="@drawable/social_twitter" />

            <ImageView
                android:id="@+id/imgv_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/linkedin_icon"
                android:src="@drawable/social_linkedin" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_speaker_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgv_header_bg"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="@dimen/def_padding_large"
            android:paddingRight="@dimen/def_padding_large"
            android:paddingBottom="@dimen/def_padding"
            android:textColor="@android:color/black"
            tools:text="@tools:sample/lorem/random" />
    </RelativeLayout>


</ScrollView>
