<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:id="@+id/scheduleRootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry,UselessParent">

        <ImageView
            android:id="@+id/available_indicator"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/hint_available"
            android:visibility="visible"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/session_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                tools:text="Title" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="2"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:text="10:00 am - 10:30 am" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/prefix_room"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorGray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/room_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorGray"
                    android:textSize="13sp"
                    tools:text="Room Blah Blah" />

            </LinearLayout>

            <TextView
                android:id="@+id/speaker_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="2"
                android:textAlignment="gravity"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="A Speaker, asdf asfafsafdasffas, asdf asfadsfasdf, asdf, asdfsadf, asdf, asdfasdfasf, asdf, asdf" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/avatar_layout"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/speaker_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/speaker_avatar"
                tools:src="@drawable/bg_social_btn" />

            <TextView
                android:id="@+id/speaker_count"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="bottom|end"
                android:background="@drawable/circular_textview_accent_background"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone"
                tools:text="+2"
                tools:visibility="visible" />
        </FrameLayout>

        <ImageView
            android:id="@+id/bookmark_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/hint_bookmark"
            android:tint="@color/colorStar"
            app:srcCompat="@drawable/ic_heart" />
    </LinearLayout>

</FrameLayout>